# cashcow

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  A1_coverage.json  A1_results.json  A2_coverage.json  A2_results.json  A3_coverage.json  A3_results.json  AGENTIC_TESTING_TASKS.md  AI_AGENT_INSTRUCTIONS.md  B1_coverage.json  B1_results.json  B2_coverage.json  B2_results.json  B3_basic_coverage.json  B3_basic_results.json  B3_coverage.json  B3_results.json  C1_coverage.json  C1_results.json  CLAUDE.md  Dockerfile  Makefile  POETRY_SHELL_GUIDE.md  README-deployment.md  README.md  TASK_ORCHESTRATOR.md  TESTING_PLAN.md  activate.sh  cashcow.code-workspace  cashcow.db  docker-compose.prod.yml  docker-compose.yml  implementation-plan.md  pyproject.toml  test_phase1.py  test_phase3.py  test_phase5.py
.example_entities/entities/projects/: raptor-class-development.yaml
cashcow-docs/: CLAUDE.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
cashcow-docs/docs/: GETTING_STARTED.md  README.md  test-mermaid.md
cashcow-docs/docs/advanced/: INTEGRATION_DEPLOYMENT_SUMMARY.md  TROUBLESHOOTING.md  _category_.json
cashcow-docs/docs/architecture/: ARCHITECTURE_ANALYSIS.md  ARCHITECTURE_SUMMARY.md  ENTITY_SYSTEM_SUMMARY.md  _category_.json
cashcow-docs/docs/examples/: README.md  entity_creation_examples.md  reports_analysis_examples.md
cashcow-docs/docs/user-guides/: CALCULATION_ENGINE_GUIDE.md  CLI_REFERENCE.md  ENTITIES_GUIDE.md  REPORTS_GUIDE.md  _category_.json
cashcow-docs/src/pages/: index.tsx
config/: settings.yaml
entities/expenses/employees/: alexander-wright.yaml  example-employee.yaml  jane-doe-engineer.yaml  john-smith-ceo.yaml
entities/expenses/facilities/: main-office.yaml  main-test-facility.yaml
entities/expenses/operations/: claude-code.yaml  lab-equipment.yaml  (+1 more)
entities/projects/: rocket-engine-dev.yaml
monitoring/: prometheus.yml
nginx/: nginx.conf  nginx.prod.conf
nginx/conf.d/: cashcow.conf
scenarios/: baseline.yaml  cash-preservation.yaml  conservative.yaml  optimistic.yaml
scripts/: backup.sh  deploy.sh  init-db.sql  restore.sh  validate_captable_config.py
src/cashcow/: __init__.py  config.py  validation.py  watchers.py
tests/: conftest.py  test_calculators.py  test_database_monitoring.py  test_integration.py  test_integration_phase2.py  test_memory_profiling.py  test_models.py  test_parallel_benchmarks.py  test_performance.py  test_query_optimization.py  test_reports.py  test_reports_basic.py  test_scenarios.py  test_storage.py  test_storage_corrected.py
tests/test_captable/: __init__.py  test_captable_models.py  test_enhanced_investment.py  test_integration.py
tests/test_engine/: __init__.py  test_captable_calculators.py
tests/test_validators/: __init__.py  test_captable_validators.py
tests/web/: conftest.py  test_api_calculations.py  test_api_entities.py  test_integration.py  test_websockets.py
(+138 files in other folders)
